--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,11 @@
 	<version>0.5.0-SNAPSHOT</version>
 
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
+    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<sonar.projectKey>yekaterina-u_ivt-lab</sonar.projectKey>
+ 		<sonar.organization>yekaterina-u</sonar.organization>
+  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    </properties>
 
 	<dependencies>
 		<dependency>
