--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,6 +1,6 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
-- name: Build with Maven
+- name: Java CI with Maven
 run: mvn -B package sonar:sonar --file pom.xml
 env:
     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
