--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,10 +1,7 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
-- name: Build with Maven
-run: mvn -B package sonar:sonar --file pom.xml
-env:
-    SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+name: Java CI with Maven
 
 on:
   push:
@@ -24,4 +21,7 @@ jobs:
       with:
         java-version: 11.0
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -B package sonar:sonar --file pom.xml
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN}}
+        GITHUB_TOKEN: $ {{secrets.GITHUB_TOKEN}}
